<resources>
    <string name="app_name" translatable="false">Glucose Tracker</string>
    <string name="app_version" translatable="false">1.0.7</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_suspend_medication_taking">Suspend taking</string>
    <string name="action_resume_medication_taking">Resume taking</string>
    <string name="fab_menu_blood_sugar">Blood sugar</string>
    <string name="fab_menu_note">Note</string>
    <string name="fab_menu_insulin" translatable="false">Insulin intake</string>
    <string name="fab_menu_medication">Medication intake</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_statistics">Statistics</string>
    <string name="bottom_nav_archive">Archive</string>
    <string name="bottom_nav_more">More</string>
    <string name="dialog_title_confirm">Are you sure?</string>
    <string name="dialog_msg_delete_note">Note will be permanently deleted.</string>
    <string name="dialog_msg_delete_glucose">Log will be permanently deleted.</string>
    <string name="dialog_msg_delete_a1c">Log will be permanently deleted.</string>
    <string name="dialog_msg_import_completed">Import completed</string>
    <string name="dialog_msg_backup_created">Backup created successfully</string>
    <string name="dialog_msg_delete_insulin">Insulin and all the associated records will be permanently deleted.</string>
    <string name="dialog_msg_delete_medication">Medication and all the associated records will be permanently deleted.</string>
    <string name="dialog_msg_delete_insulin_log">Log will be permanently deleted.</string>
    <string name="hint_sugar_level">Sugar level</string>
    <string name="hint_note">Note</string>
    <string name="hint_measured">Measured</string>
    <string name="hint_a1c" translatable="false">HbA1c</string>
    <string name="hint_units">Number of units</string>
    <string name="hint_insulin_type">Insulin type</string>
    <string name="hint_title">Title</string>
    <string name="hint_dosage_form">Dosage form</string>
    <string name="hint_indicate_height">Set your height in settings for calculating BMI</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_dosage">Dosage</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_active_medications">Active medications</string>
    <string name="hint_suspended_medications">Suspended medications</string>
    <string name="hint_active_insulin_list">Active</string>
    <string name="hint_suspended_insulin_list">Suspended</string>
    <string name="error_import_file">File import error</string>
    <string name="error_export_file">Export file error</string>
    <string name="error_saving_note">Error saving note</string>
    <string name="error_deleting_note">Error deleting note</string>
    <string name="error_saving_log">Error saving log</string>
    <string name="error_deleting_log">Error deleting log</string>
    <string name="error_medication_list_empty">Add medication first</string>
    <string name="error_insulin_list_empty">Add insulin first</string>
    <string name="no_data">No data</string>
    <string name="no_value">Please fill in this field</string>
    <string name="no_insulin">No insulin</string>
    <string name="no_medication">No medication</string>
    <string name="stats_min">Minimum value</string>
    <string name="stats_max">Maximum value</string>
    <string name="stats_avg">Average value</string>
    <string name="stats_a1c">HbA1c estimated value</string>
    <string name="stats_before_meal">Before meal</string>
    <string name="stats_after_meal">After meal</string>
    <string name="diabetes_control_good">Good diabetes control</string>
    <string name="diabetes_control_relative">Relative diabetes control</string>
    <string name="diabetes_control_bad">Poor diabetes control</string>
    <string name="error_opening_log">Error opening log</string>
    <string name="error_create_backup">Error creating backup</string>
    <string name="error_import">Import error</string>
    <string name="error_import_backup">Import error</string>
    <string name="error_statistics">Error loading statistics</string>
    <string name="main_pref_theme">Theme</string>
    <string name="main_pref_glucose_units">Glucose units</string>
    <string name="main_pref_weight_units">Weight units</string>
    <string name="main_pref_height">Height</string>
    <string name="main_pref_height_summary">Indicate your height for calculating body mass index</string>
    <string name="main_pref_category_backup">Backup and import</string>
    <string name="main_pref_export_backup">Export to file</string>
    <string name="main_pref_import_backup">Import from file</string>
    <string name="main_pref_category_google_drive" translatable="false">Google Drive</string>
    <string name="main_pref_auto_sync">Auto sync</string>
    <string name="main_pref_auto_sync_summary">Create backup automatically every day</string>
    <string name="main_pref_export_drive">Create backup</string>
    <string name="main_pref_import_drive">Import backup</string>
    <string name="main_pref_last_synced">Last sync</string>
    <string name="main_pref_category_about_app">About app</string>
    <string name="main_pref_rate_app">Rate app</string>
    <string name="main_pref_app_version_title">App version</string>
    <string name="plus_pref_insulin_list">Insulin list</string>
    <string name="plus_pref_medications">Medications</string>
    <string name="pref_category_measurements">Measurements</string>
    <string name="plus_pref_a1c" translatable="false">HbA1c</string>
    <string name="plus_pref_weight">Weight</string>
    <string name="height_unit_cm">cm</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">Follow system</string>
    <string name="stats_period_two_weeks">Last 2 weeks</string>
    <string name="stats_period_month">Last month</string>
    <string name="stats_period_three_months">Last 3 months</string>
    <string name="period_year">Last year</string>
    <string name="glucose_unit_mmol_l">mmol/L</string>
    <string name="glucose_unit_mg_dl">mg/dL</string>
    <string name="measured_before_breakfast">Before breakfast</string>
    <string name="measured_after_breakfast">After breakfast</string>
    <string name="measured_before_lunch">Before lunch</string>
    <string name="measured_after_lunch">After lunch</string>
    <string name="measured_before_dinner">Before dinner</string>
    <string name="measured_after_dinner">After dinner</string>
    <string name="measured_other">Other</string>
    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>
    <string name="month_jan_a">Jan</string>
    <string name="month_feb_a">Feb</string>
    <string name="month_mar_a">Mar</string>
    <string name="month_apr_a">Apr</string>
    <string name="month_may_a">May</string>
    <string name="month_jun_a">Jun</string>
    <string name="month_jul_a">Jul</string>
    <string name="month_aug_a">Aug</string>
    <string name="month_sep_a">Sep</string>
    <string name="month_oct_a">Oct</string>
    <string name="month_nov_a">Nov</string>
    <string name="month_dec_a">Dec</string>
    <string name="insulin_type_rapid">Rapid</string>
    <string name="insulin_type_short">Short</string>
    <string name="insulin_type_intermediate">Intermediate</string>
    <string name="insulin_type_long">Long</string>
    <string name="weight_unit_kg">kg</string>
    <string name="weight_unit_lb">lb</string>
    <string name="dosage_unit_mg">mg</string>
    <string name="dosage_unit_ml">ml</string>
    <string name="dosage_unit_g">g</string>
    <string name="dosage_unit_IU">IU</string>
    <string name="dosage_unit_mg_ml">mg/ml</string>
    <string name="dosage_unit_mcg">µg</string>
    <string name="dosage_unit_mcg_ml">µg/ml</string>
    <string name="dosage_form_tablet">Tablet</string>
    <string name="dosage_form_capsule">Capsule</string>
    <string name="dosage_form_ampule">Ampule</string>
    <string name="dosage_form_injection">Injection</string>
    <string name="dosage_form_packet">Packet</string>
    <string name="dosage_form_drop">Drop</string>
    <string name="dosage_form_dose">Dose</string>
    <string name="dosage_form_ml">ml</string>
    <string name="dosage_form_g">Gram</string>
    <string name="dosage_form_iu">IU</string>
    <string name="dosage_form_suppository">Suppository</string>
    <plurals name="tablet">
        <item quantity="one">%1$s tablet</item>
        <item quantity="other">%1$s tablets</item>
    </plurals>
    <plurals name="capsule">
        <item quantity="one">%1$s capsule</item>
        <item quantity="other">%1$s capsules</item>
    </plurals>
    <plurals name="ampule">
        <item quantity="one">%1$s ampule</item>
        <item quantity="other">%1$s ampules</item>
    </plurals>
    <plurals name="injection">
        <item quantity="one">%1$s injection</item>
        <item quantity="other">%1$s injections</item>
    </plurals>
    <plurals name="packet">
        <item quantity="one">%1$s packet</item>
        <item quantity="other">%1$s packets</item>
    </plurals>
    <plurals name="drop">
        <item quantity="one">%1$s drop</item>
        <item quantity="other">%1$s drops</item>
    </plurals>
    <plurals name="dose">
        <item quantity="one">%1$s dose</item>
        <item quantity="other">%1$s doses</item>
    </plurals>
    <plurals name="gram">
        <item quantity="one">%1$s gram</item>
        <item quantity="other">%1$s grams</item>
    </plurals>
    <plurals name="suppository">
        <item quantity="one">%1$s suppository</item>
        <item quantity="other">%1$s suppositories</item>
    </plurals>
    <plurals name="ml">
        <item quantity="one">%1$s ml</item>
        <item quantity="other">%1$s ml</item>
    </plurals>
    <plurals name="iu">
        <item quantity="one">%1$s IU</item>
        <item quantity="other">%1$s IU</item>
    </plurals>
    <plurals name="units">
        <item quantity="one">%1$s unit</item>
        <item quantity="other">%1$s units</item>
    </plurals>
    <string name="bmi_category_thinness_3">Severe thinness</string>
    <string name="bmi_category_thinness_2">Moderate thinness</string>
    <string name="bmi_category_thinness_1">Mild thinness</string>
    <string name="bmi_category_normal_weight">Normal</string>
    <string name="bmi_category_overweight">Overweight</string>
    <string name="bmi_category_obese_1">Obese Class I</string>
    <string name="bmi_category_obese_2">Obese Class II</string>
    <string name="bmi_category_obese_3">Obese Class III</string>
    <string name="bmi_result">BMI: %1$.1f (%2$s)</string>
    <string-array name="chart_titles">
        <item>Blood sugar (before meal)</item>
        <item>Blood sugar (after meal)</item>
        <item>HbA1c</item>
        <item>Weight</item>
    </string-array>
    <string-array name="chart_periods">
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 months</item>
    </string-array>
</resources>