<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/outline_home_black_24dp"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/outline_insert_chart_black_24dp"
        android:title="@string/bottom_nav_statistics" />

    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/outline_archive_black_24dp"
        android:title="@string/bottom_nav_archive" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/outline_settings_black_24dp"
        android:title="@string/bottom_nav_settings" />
    <!--
    <item
        android:id="@+id/menu_plus"
        android:icon="@drawable/baseline_more_horiz_black_24dp"
        android:title="@string/bottom_nav_more" />
    -->
</menu>