<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/logListBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_stats"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spinner_stats"
                        android:entries="@array/chart_periods"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:minHeight="48dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TableLayout
                        android:background="?attr/logItemBackgroundColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/stats_min"
                                app:layout_constraintTop_toBottomOf="@+id/spinner_period"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp"
                                android:textSize="16sp"
                                android:textColor="?android:attr/textColorPrimary"
                                android:gravity="center_vertical"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="48dp"/>

                            <TextView
                                android:id="@+id/text_min"
                                style="@style/TextAppearance.AppCompat.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:layout_marginEnd="16dp"
                                android:gravity="center_vertical"
                                tools:text="4.2 mmol/L"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/text_min" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/stats_max"
                                app:layout_constraintTop_toBottomOf="@+id/spinner_period"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp"
                                android:textSize="16sp"
                                android:textColor="?android:attr/textColorPrimary"
                                android:gravity="center_vertical"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="48dp"/>

                            <TextView
                                android:id="@+id/text_max"
                                style="@style/TextAppearance.AppCompat.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:layout_marginEnd="16dp"
                                android:gravity="center_vertical"
                                tools:text="7.4 mmol/L"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/text_min" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/stats_avg"
                                app:layout_constraintTop_toBottomOf="@+id/spinner_period"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp"
                                android:textSize="16sp"
                                android:textColor="?android:attr/textColorPrimary"
                                android:gravity="center_vertical"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="48dp"/>

                            <TextView
                                android:id="@+id/text_avg"
                                style="@style/TextAppearance.AppCompat.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:layout_marginEnd="16dp"
                                android:gravity="center_vertical"
                                tools:text="5.6 mmol/L"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/text_min" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/stats_a1c"
                                app:layout_constraintTop_toBottomOf="@+id/spinner_period"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="16dp"
                                android:textSize="16sp"
                                android:textColor="?android:attr/textColorPrimary"
                                android:gravity="center_vertical"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_weight="1"
                                android:layout_marginEnd="8dp"
                                android:layout_width="0dp"
                                android:layout_height="48dp"/>

                            <TextView
                                android:id="@+id/text_a1c"
                                style="@style/TextAppearance.AppCompat.Body2"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:layout_marginEnd="16dp"
                                android:gravity="center_vertical"
                                tools:text="5.3%"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/text_min" />

                        </TableRow>

                    </TableLayout>

                    <TextView
                        android:background="?attr/logItemBackgroundColor"
                        tools:visibility="visible"
                        app:layout_constraintTop_toBottomOf="@+id/table"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:visibility="gone"
                        android:drawablePadding="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textSize="16sp"
                        android:id="@+id/text_a1c_control_good"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textColor="?attr/diabetesControlGoodColor"
                        android:text="@string/diabetes_control_good"
                        app:drawableTint="?attr/diabetesControlGoodColor"
                        app:drawableStartCompat="@drawable/icon_checked" />

                    <TextView
                        android:id="@+id/text_a1c_control_avg"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/logItemBackgroundColor"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/diabetes_control_relative"
                        android:textColor="?attr/diabetesControlAvgColor"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/icon_checked"
                        app:drawableTint="?attr/diabetesControlAvgColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/table" />

                    <TextView
                        android:id="@+id/text_a1c_control_bad"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="?attr/logItemBackgroundColor"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/diabetes_control_bad"
                        android:textColor="?attr/diabetesControlBadColor"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/icon_error"
                        app:drawableTint="?attr/diabetesControlBadColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/table" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_chart"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/chart_title_spinner"
                            android:entries="@array/chart_titles"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="48dp"/>

                        <Spinner
                            android:id="@+id/chart_period_spinner"
                            android:entries="@array/chart_periods"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="48dp"/>

                    </LinearLayout>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/text_error"
        android:text="@string/error_statistics"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="?attr/colorError"
        android:textSize="16sp"
        android:drawablePadding="8dp"
        app:drawableTint="?attr/colorError"
        app:drawableTopCompat="@drawable/icon_error" />

</RelativeLayout>